# daisy

./: .gitignore  .gitmodules  .tool-versions  LICENSE  README.md  analysis_options.yaml  justfile  pubspec.yaml
.github/workflows/: Package.yml  Release.yml
android/: build.gradle
android/app/: build.gradle
ci/: version.info.txt
integration_test/: simple_test.dart
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: commons.dart  const.dart  cross.dart  ffi.dart  main.dart  themes.dart  utils.dart
lib/configs/: android_display_mode.dart  android_version.dart  app_orientation.dart  auto_clean.dart  last_module.dart  login.dart  novel_background_color.dart  novel_font_color.dart  (+12 more)
linux/: CMakeLists.txt  my_application.cc  rust.cmake
rust/: Cargo.toml  build.rs
rust/src/: download_thread.rs  frb_generated.rs  lib.rs  local.rs  tests.rs  utils.rs
rust/src/anime_home/: client.rs  entities.rs  mod.rs  proto.rs  tests.rs
rust/src/api/: bridge.rs  mod.rs
rust/src/database/: mod.rs
rust/src/database/active/: comic_view_log.rs  mod.rs  novel_view_log.rs
rust/src/database/cache/: image_cache.rs  mod.rs  web_cache.rs
rust/src/database/download/: download_comic.rs  download_comic_chapter.rs  download_comic_page.rs  mod.rs
rust/src/database/properties/: mod.rs  property.rs
rust_builder/: pubspec.yaml
scripts/: bind.android.sh  bind.ios-sim.sh  bind.ios.sh  bind.linux.sh  bind.macos.sh  bind.windows.cmd
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+83 files in other folders)
